--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
     <!-- Hero Section -->
     <!------------------->
     <section class="hero position-relative text-center text-white">
-      <img src="img/main/berwick.jpg" alt="Background Image" class="img-fluid w-100 h-100 object-fit-cover">
-      <div class="hero-caption position-absolute top-50 start-50 translate-middle">
-        <img class="hero-img mx-auto d-block" src="img/main/2025.png" alt="">
-        <a href="#about" class="btn btn-dark fw-bold mt-3">About Us</a>
+      <img src="img/main/berwick.jpg" alt="Background Image" class="">
+      <div class="hero-caption">
+        <img class="hero-img mx-auto d-block" src="img/main/logo.png" alt="">
+        <a href="#about" class="btn btn-dark fw-medium mt-3">About Us</a>
       </div>
     </section>
 
@@ -130,20 +130,23 @@
               competitive prices. Our commitment to customer satisfaction means we always go the extra mile to ensure
               you're happy with the results. No matter what your car needs, from a simple oil change to a complete
               engine rebuild, you can count on us for expert workmanship and exceptional service.</p>
-            <a href="#" class="btn btn-dark text-center text-md-start fw-medium">Learn More</a>
+            <a href="#" class="btn btn-dark text-center text-md-start fw-medium about-btn">Learn More</a>
           </div>
           <div class="col-md-6">
-            <img src="img/main/about-image.png" class="img-fluid rounded" alt="Hero Image">
+            <img src="img/main/about-image.png" class="img-fluid rounded about-img-responsive" alt="Hero Image">
           </div>
         </div>
       </div>
     </div>
 
+    <!-- Snazzy Divider -->
+    <div class="b-example-divider"></div>
+
     <!---------------------->
     <!-- Services Section -->
     <!---------------------->
 
-    <div class="container px-4 py-4" id="services">
+    <div class="container px-4 py-4 bg-light" id="services">
       <h1 class="border-bottom text-center text-md-start">Services</h1>
       <div class="row row-cols-1 row-cols-lg-3 g-4 py-3">
         <div class="col">
@@ -153,8 +156,7 @@
               <h5 class="card-title">Residential</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
-              <button type="button" class="btn btn-dark" data-image-src="img/main/castle.jpg"
-                data-title="Residential">More Info</button>
+
             </div>
           </div>
         </div>
@@ -165,8 +167,7 @@
               <h5 class="card-title">Commercial</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
-              <button type="button" class="btn btn-dark" data-image-src="img/main/castle.jpg"
-                data-title="Commercial">More Info</button>
+
             </div>
           </div>
         </div>
@@ -177,8 +178,7 @@
               <h5 class="card-title">Industrial</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
                 content.</p>
-              <button type="button" class="btn btn-dark" data-image-src="img/main/castle.jpg"
-                data-title="Industrial">More Info</button>
+
             </div>
           </div>
         </div>
