--- a/gallery.html
+++ b/gallery.html
@@ -62,11 +62,11 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a href="#" class="nav-link" aria-current="page">Home</a></li>
-          <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
-          <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
-          <li class="nav-item"><a href="/gallery.html" class="nav-link active">Gallery</a></li>
-          <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+          <li class="nav-item"><a href="index.html" class="nav-link" aria-current="page">Home</a></li>
+          <li class="nav-item"><a href="index.html#services" class="nav-link">Services</a></li>
+          <li class="nav-item"><a href="index.html#about" class="nav-link">About</a></li>
+          <li class="nav-item"><a href="#" class="nav-link active">Gallery</a></li>
+          <li class="nav-item"><a href="index.html#contact" class="nav-link">Contact</a></li>
         </ul>
       </div>
     </div>
@@ -82,7 +82,7 @@
           Make it short and sweet, but not too short so folks don’t simply skip over it entirely.
         </p>
         <p>
-          <a href="#" class="btn btn-primary btn-primary-custom my-2">Main call to action</a>
+          <a href="#" class="btn btn-dark btn-dark-custom my-2">Main call to action</a>
           <a href="#" class="btn btn-outline-secondary btn-secondary-custom my-2">Secondary action</a>
         </p>
       </div>
@@ -146,7 +146,7 @@
               </div>
               <div class="col-md-12">
                 <div class="d-flex justify-content-left">
-                  <button type="submit" class="btn btn-primary btn-primary-custom fw-medium">Submit</button>
+                  <button type="submit" class="btn btn-dark btn-dark-custom fw-medium">Submit</button>
                 </div>
               </div>
             </div>
