--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               engine rebuild, you can count on us for expert workmanship and exceptional service.</p>
             <a href="#" class="btn btn-dark text-center text-md-start fw-medium about-btn">Learn More</a>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6 text-end">
             <img src="img/main/about-image.png" class="img-fluid rounded about-img-responsive" alt="Hero Image">
           </div>
         </div>
