--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
   <!-- Open Graph meta tags -->
   <meta property="og:title" content="The Northumbrian Mechanic LTD">
   <meta property="og:description" content="The Northumbrian Mechanic LTD. Based in Berwick-upon-Tweed, Northumberland.">
-  <meta property="og:image" content="https://elenamaya.com/img/main/2025.png">
-  <meta property="og:url" content="http://elenamaya.com">
+  <!-- <meta property="og:image" content="https://elenamaya.com/img/main/2025.png"> -->
+  <!-- <meta property="og:url" content="http://elenamaya.com"> -->
   <meta property="og:type" content="website">
 
   <!-- Twitter Card meta tags -->
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="The Northumbrian Mechanic LTD">
   <meta name="twitter:description" content="Based in Berwick-upon-Tweed, Northumberland.">
-  <meta name="twitter:image" content="https://elenamaya.com/img/main/2025.png">
-  <meta name="twitter:url" content="http://elenamaya.com">
-
-  <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/album/">
+  <!-- <meta name="twitter:image" content="https://elenamaya.com/img/main/2025.png"> -->
+  <!-- <meta name="twitter:url" content="http://elenamaya.com"> -->
+  <!-- 
+  <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/album/"> -->
 
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/x-icon" href="/img/favicon.ico">
