--- a/gallery.html
+++ b/gallery.html
@@ -62,7 +62,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a href="index.html" class="nav-link" aria-current="page">Home</a></li>
+          <li class="nav-item"><a href="./index.html" class="nav-link" aria-current="page">Home</a></li>
           <li class="nav-item"><a href="index.html#services" class="nav-link">Services</a></li>
           <li class="nav-item"><a href="index.html#about" class="nav-link">About</a></li>
           <li class="nav-item"><a href="#" class="nav-link active">Gallery</a></li>
