--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <!-- About Section -->
     <!------------------->
 
-    <div class="about-section py-5 bg-light" id="about">
+    <div class="about-section py-5" id="about">
       <div class="container px-4">
         <div class="row align-items-center">
           <div class="col-md-6">
@@ -146,7 +146,7 @@
     <!-- Services Section -->
     <!---------------------->
 
-    <div class="container px-4 py-4 bg-light" id="services">
+    <div class="container px-4 py-4" id="services">
       <h1 class="border-bottom text-center text-md-start">Services</h1>
       <div class="row row-cols-1 row-cols-lg-3 g-4 py-3">
         <div class="col">
@@ -255,7 +255,7 @@
     </div>
   </div>
 
-  <footer class="text-body-secondary pt-5 bg-light">
+  <footer class="text-body-secondary pt-5">
     <div class="container">
       <p class="float-end mb-1">
         <a href="#" class="back-to-top"><i class="fa-solid fa-arrow-up"></i></a>
