--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="/">
+        <a class="navbar-brand" href="#">
           <span class="love-ya-like-a-sister-regular">The Northumbrian Mechanic</span>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
