--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
           <div class="card h-100 text-center">
             <img src="img/main/Card1.png" class="card-img-top" alt="Residential">
             <div class="card-body">
-              <h5 class="card-title">Residential</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <h5 class="card-title">Routine Maintenance</h5>
+              <p class="card-text"> Keep your car running smoothly with our regular servicing, tyre checks, brake
+                inspections, and more. Prevent costly repairs down the road with proactive maintenance.</p>
 
             </div>
           </div>
@@ -164,9 +164,9 @@
           <div class="card h-100 text-center">
             <img src="img/main/Card2.png" class="card-img-top" alt="Commercial">
             <div class="card-body">
-              <h5 class="card-title">Commercial</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <h5 class="card-title">Diagnostics & Repairs</h5>
+              <p class="card-text">Experiencing car trouble? Our expert technicians use advanced diagnostics to pinpoint
+                the problem and provide efficient, reliable repairs for all makes and models.</p>
 
             </div>
           </div>
@@ -175,9 +175,10 @@
           <div class="card h-100 text-center">
             <img src="img/main/Card3.png" class="card-img-top" alt="Industrial">
             <div class="card-body">
-              <h5 class="card-title">Industrial</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-                content.</p>
+              <h5 class="card-title">Service & MOT preparation</h5>
+              <p class="card-text">From routine servicing to thorough MOT preparation, we ensure your vehicle is
+                roadworthy and ready for its test. We can also carry out any necessary repairs identified during the
+                preparation process.</p>
 
             </div>
           </div>
