--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
       <img src="img/main/berwick.jpg" alt="Background Image" class="">
       <div class="hero-caption">
         <img class="hero-img mx-auto d-block" src="img/main/logo.png" alt="">
-        <a href="#about" class="btn btn-dark fw-medium mt-3">About Us</a>
+        <a href="#about" class="btn btn-outline-light fw-medium mt-3">About Us</a>
       </div>
     </section>
 
     <!-- Snazzy Divider -->
-    <div class="b-example-divider"></div>
+    <!-- <div class="b-example-divider"></div> -->
 
     <!------------------->
     <!-- About Section -->
@@ -265,7 +265,7 @@
     </div>
   </footer>
   <script src="js/main.js"></script>
-  <script src="js/gallery.js"></script>
+  <!-- <script src="js/gallery.js"></script> -->
   <script src="js/bootstrap.bundle.min.js"></script>
   <script>
     document.getElementById('currentYear').textContent = new Date().getFullYear();
