--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
               competitive prices. Our commitment to customer satisfaction means we always go the extra mile to ensure
               you're happy with the results. No matter what your car needs, from a simple oil change to a complete
               engine rebuild, you can count on us for expert workmanship and exceptional service.</p>
-            <a href="#" class="btn btn-dark text-center text-md-start fw-medium about-btn">Learn More</a>
+            <a href="#services" class="btn btn-dark text-center text-md-start fw-medium about-btn">Learn More</a>
           </div>
           <div class="col-md-6 text-end">
             <img src="img/main/about-image.png" class="img-fluid rounded about-img-responsive" alt="Hero Image">
