--- a/index.html
+++ b/index.html
@@ -186,8 +186,15 @@
             </div>
           </div>
         </div>
+
+      </div>
+      <div class="d-flex justify-content-center">
+        <a href="./gallery.html" class="btn btn-dark text-center fw-medium">View Gallery</a>
       </div>
     </div>
+
+    <!-- Snazzy Divider -->
+    <div class="b-example-divider"></div>
 
     <!--------------------->
     <!-- Contact Section -->
