--- a/gallery.html
+++ b/gallery.html
@@ -38,6 +38,7 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/style.css?v=1.0">
   <link rel="stylesheet" href="css/gallery.css?v=1.0">
+  <link rel="stylesheet" href="css/fonts.css?v=1.0">
 
   <!-- Google reCaptcha -->
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
