--- a/gallery.html
+++ b/gallery.html
@@ -46,9 +46,6 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Love+Ya+Like+A+Sister&display=swap"
-    rel="stylesheet">
 
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/17e7e77638.js" crossorigin="anonymous"></script>
@@ -99,7 +96,7 @@
     <div class="container">
       <div class="row mb-4">
         <div class="col text-center">
-          <h1 class="fw-light">Our Work</h1>
+          <h1 class="">Our Work</h1>
           <p class="lead text-body-secondary">
             Browse our recent work below.
           </p>
@@ -110,6 +107,9 @@
       </div>
     </div>
   </section>
+
+  <!-- Snazzy Divider -->
+  <div class="b-example-divider"></div>
 
   <!-- Contact Section -->
   <section id="contact" class="py-5">
