--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
+  <!-- <link
     href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Dancing+Script:wght@400..700&family=Love+Ya+Like+A+Sister&display=swap"
-    rel="stylesheet">
+    rel="stylesheet"> -->
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/17e7e77638.js" crossorigin="anonymous"></script>
 </head>
@@ -125,7 +125,7 @@
       <div class="container px-4">
         <div class="row align-items-center">
           <div class="col-md-6">
-            <h1 class="border-bottom text-center text-md-start">About</h1>
+            <h1 class="pb-2 border-bottom text-center text-md-start">About</h1>
             <p class="text-center text-md-start">The Northumbrian Mechanic is your local, trusted electrician serving
               Berwick-upon-Tweed, the Scottish borders, and the surrounding areas of Northumberland. With years of
               experience in the industry, we offer a wide range of mechanical services, including servicing, repairs,
@@ -151,7 +151,7 @@
     <!---------------------->
 
     <div class="container px-4 py-4" id="services">
-      <h1 class="border-bottom text-center text-md-start">Services</h1>
+      <h1 class="border-bottom text-center text-md-start pb-2">Services</h1>
       <div class="row row-cols-1 row-cols-lg-3 g-4 py-3">
         <div class="col">
           <div class="card h-100 text-center">
@@ -202,7 +202,7 @@
     <!--------------------->
     <section id="contact" class="py-5">
       <div class="container px-4">
-        <h2 class="pb-2 border-bottom text-left barlow-condensed-regular" data-aos="fade-down" data-aos-duration="1000">
+        <h2 class="pb-2 border-bottom text-left" data-aos="fade-down" data-aos-duration="1000">
           Enquiries
         </h2>
         <div class="row pt-4">
