--- a/gallery.html
+++ b/gallery.html
@@ -106,6 +106,10 @@
         <!-- Gallery items will be injected here by the JS -->
       </div>
     </div>
+
+    <!-- <div class="pt-5 d-flex justify-content-center">
+      <a href="./gallery.html" class="btn btn-dark text-center fw-medium">View Gallery</a>
+    </div> -->
   </section>
 
   <!-- Snazzy Divider -->
@@ -165,8 +169,8 @@
   <div class="modal fade" id="exampleModalDefault" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered">
       <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Project Title</h5>
+        <div class="modal-header justify-content-center">
+          <h5 class="modal-title text-center" id="exampleModalLabel">Project Title</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -183,7 +187,7 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-          <div id="modalDescription" class="mt-3 gallery-modal-description">
+          <div id="modalDescription" class="mt-3 gallery-modal-description text-center">
             <!-- Description will be injected here by the JS -->
           </div>
         </div>
