--- a/gallery.html
+++ b/gallery.html
@@ -120,7 +120,7 @@
     <div class="container px-4">
       <h2 class="pb-2 border-bottom text-left love-ya-like-a-sister-regular" data-aos="fade-down"
         data-aos-duration="1000">
-        Enquiries
+        Contact Us
       </h2>
       <div class="row pt-4">
         <div class="col-md-12" data-aos="fade-up" data-aos-duration="1000">
