--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     <section id="contact" class="py-5">
       <div class="container px-4">
         <h2 class="pb-2 border-bottom text-left" data-aos="fade-down" data-aos-duration="1000">
-          Enquiries
+          Contact Us
         </h2>
         <div class="row pt-4">
           <div class="col-md-12" data-aos="fade-up" data-aos-duration="1000">
