--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <!--------------------->
     <!-- Contact Section -->
     <!--------------------->
-    <section id="contact" class="py-5">
+    <section id="contact" class="pb-2 pt-5">
       <div class="container px-4">
         <h2 class="pb-2 border-bottom text-left" data-aos="fade-down" data-aos-duration="1000">
           Contact Us
@@ -244,6 +244,38 @@
               </div>
             </form>
           </div>
+        </div>
+        <h2 class="pt-4 pb-2 border-bottom text-left" data-aos="fade-down" data-aos-duration="1000">
+          Our Socials
+        </h2>
+        <div class="row justify-content-start pt-2">
+          <!-- Facebook Badge -->
+          <div class="col-auto mb-2">
+            <a href="https://www.facebook.com/profile.php?id=61572430464518" target="_blank" class="badge-link">
+              <span class="badge text-primary-emphasis bg-primary-subtle border border-primary-subtle me-1">
+                <img src="/img/svg-icons/facebook.svg" alt="Facebook" width="24" height="24" class="me-2">
+                Facebook
+              </span>
+            </a>
+          </div>
+          <!-- Instagram Badge -->
+          <!-- <div class="col-auto mb-2">
+            <a href="#" target="_blank" class="badge-link">
+              <span class="badge text-warning-emphasis bg-warning-subtle border border-warning-subtle me-1">
+                <img src="/img/svg-icons/instagram.svg" alt="Instagram" width="24" height="24" class="me-2">
+                Instagram
+              </span>
+            </a>
+          </div> -->
+          <!-- TikTok Badge -->
+          <!-- <div class="col-auto mb-2">
+            <a href="#" target="_blank" class="badge-link">
+              <span class="badge text-light-emphasis bg-light-subtle border border-dark-subtle me-1">
+                <img src="/img/svg-icons/tiktok.svg" alt="TikTok" width="24" height="24" class="me-2">
+                TikTok
+              </span>
+            </a>
+          </div> -->
         </div>
       </div>
     </section>
