--- a/gallery.html
+++ b/gallery.html
@@ -116,10 +116,12 @@
   <div class="b-example-divider"></div>
 
   <!-- Contact Section -->
-  <section id="contact" class="py-5">
+  <!--------------------->
+  <!-- Contact Section -->
+  <!--------------------->
+  <section id="contact" class="pb-2 pt-5">
     <div class="container px-4">
-      <h2 class="pb-2 border-bottom text-left love-ya-like-a-sister-regular" data-aos="fade-down"
-        data-aos-duration="1000">
+      <h2 class="pb-2 border-bottom text-left" data-aos="fade-down" data-aos-duration="1000">
         Contact Us
       </h2>
       <div class="row pt-4">
@@ -131,7 +133,7 @@
                 <input type="text" class="form-control" id="name" placeholder="Your name" name="name" required>
               </div>
               <div class="col-md-6">
-                <label for="phone" class="form-label form-mob-margin">Phone Number</label>
+                <label for="phone" class="form-label">Phone Number</label>
                 <input type="tel" class="form-control" id="phone" placeholder="Your number" name="phone" required>
               </div>
             </div>
@@ -155,12 +157,44 @@
               </div>
               <div class="col-md-12">
                 <div class="d-flex justify-content-left">
-                  <button type="submit" class="btn btn-dark btn-dark-custom fw-medium">Submit</button>
+                  <button type="submit" class="btn btn-dark fw-medium">Submit</button>
                 </div>
               </div>
             </div>
           </form>
         </div>
+      </div>
+      <h2 class="pt-4 pb-2 border-bottom text-left" data-aos="fade-down" data-aos-duration="1000">
+        Our Socials
+      </h2>
+      <div class="row justify-content-start pt-2">
+        <!-- Facebook Badge -->
+        <div class="col-auto mb-2">
+          <a href="https://www.facebook.com/profile.php?id=61572430464518" target="_blank" class="badge-link">
+            <span class="badge text-primary-emphasis bg-primary-subtle border border-primary-subtle me-1">
+              <img src="/img/svg-icons/facebook.svg" alt="Facebook" width="24" height="24" class="me-2">
+              Facebook
+            </span>
+          </a>
+        </div>
+        <!-- Instagram Badge -->
+        <!-- <div class="col-auto mb-2">
+            <a href="#" target="_blank" class="badge-link">
+              <span class="badge text-warning-emphasis bg-warning-subtle border border-warning-subtle me-1">
+                <img src="/img/svg-icons/instagram.svg" alt="Instagram" width="24" height="24" class="me-2">
+                Instagram
+              </span>
+            </a>
+          </div> -->
+        <!-- TikTok Badge -->
+        <!-- <div class="col-auto mb-2">
+            <a href="#" target="_blank" class="badge-link">
+              <span class="badge text-light-emphasis bg-light-subtle border border-dark-subtle me-1">
+                <img src="/img/svg-icons/tiktok.svg" alt="TikTok" width="24" height="24" class="me-2">
+                TikTok
+              </span>
+            </a>
+          </div> -->
       </div>
     </div>
   </section>
