--- a/index.html
+++ b/index.html
@@ -281,6 +281,9 @@
     </section>
   </main>
 
+  <!-------------------->
+  <!-- Footer Section -->
+  <!-------------------->
   <footer class="text-body-secondary pt-5">
     <div class="container">
       <p class="float-end mb-1">
