--- a/gallery.html
+++ b/gallery.html
@@ -115,7 +115,6 @@
   <!-- Snazzy Divider -->
   <div class="b-example-divider"></div>
 
-  <!-- Contact Section -->
   <!--------------------->
   <!-- Contact Section -->
   <!--------------------->
@@ -172,7 +171,7 @@
         <div class="col-auto mb-2">
           <a href="https://www.facebook.com/profile.php?id=61572430464518" target="_blank" class="badge-link">
             <span class="badge text-primary-emphasis bg-primary-subtle border border-primary-subtle me-1">
-              <img src="/img/svg-icons/facebook.svg" alt="Facebook" width="24" height="24" class="me-2">
+              <img src="img/svg-icons/facebook.svg" alt="Facebook" width="24" height="24" class="me-2">
               Facebook
             </span>
           </a>
@@ -181,7 +180,7 @@
         <!-- <div class="col-auto mb-2">
             <a href="#" target="_blank" class="badge-link">
               <span class="badge text-warning-emphasis bg-warning-subtle border border-warning-subtle me-1">
-                <img src="/img/svg-icons/instagram.svg" alt="Instagram" width="24" height="24" class="me-2">
+                <img src="img/svg-icons/instagram.svg" alt="Instagram" width="24" height="24" class="me-2">
                 Instagram
               </span>
             </a>
@@ -190,7 +189,7 @@
         <!-- <div class="col-auto mb-2">
             <a href="#" target="_blank" class="badge-link">
               <span class="badge text-light-emphasis bg-light-subtle border border-dark-subtle me-1">
-                <img src="/img/svg-icons/tiktok.svg" alt="TikTok" width="24" height="24" class="me-2">
+                <img src="img/svg-icons/tiktok.svg" alt="TikTok" width="24" height="24" class="me-2">
                 TikTok
               </span>
             </a>
