--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
           <div class="col-auto mb-2">
             <a href="https://www.facebook.com/profile.php?id=61572430464518" target="_blank" class="badge-link">
               <span class="badge text-primary-emphasis bg-primary-subtle border border-primary-subtle me-1">
-                <img src="/img/svg-icons/facebook.svg" alt="Facebook" width="24" height="24" class="me-2">
+                <img src="./img/svg-icons/facebook.svg" alt="Facebook" width="24" height="24" class="me-2">
                 Facebook
               </span>
             </a>
