--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="row align-items-center">
           <div class="col-md-6">
             <h1 class="pb-2 border-bottom text-center text-md-start">About</h1>
-            <p class="text-center text-md-start">The Northumbrian Mechanic is your local, trusted electrician serving
+            <p class="text-center text-md-start">The Northumbrian Mechanic is your local, trusted mechanic serving
               Berwick-upon-Tweed, the Scottish borders, and the surrounding areas of Northumberland. With years of
               experience in the industry, we offer a wide range of mechanical services, including servicing, repairs,
               brakes, welding, exhausts, MOT preparation/failure correction, and more.</p>
