--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <!--------------------->
     <section id="contact" class="pb-2 pt-5">
       <div class="container px-4">
-        <h2 class="pb-2 border-bottom text-left" data-aos="fade-down" data-aos-duration="1000">
+        <h2 class="pb-2 border-bottom text-left">
           Contact Us
         </h2>
         <div class="row pt-4">
