--- a/index.html
+++ b/index.html
@@ -202,6 +202,36 @@
     <!--------------------->
     <section id="contact" class="pb-2 pt-5">
       <div class="container px-4">
+        <div class="row pt-4">
+          <h2 class="pb-2 border-bottom text-left">Visit Us</h2>
+          <div class="col-lg-6 mb-4">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.916495118648!2d-1.9995780229126532!3d55.75995279144014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x488748a30c766c15%3A0xced109bc88aadc34!2sUnit%201%201Main%20Street%2C%20Spittal%2C%20Berwick-upon-Tweed%20TD15%201QY!5e0!3m2!1sen!2suk!4v1740305365967!5m2!1sen!2suk"
+              width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+
+          </div>
+          <div class="col-lg-6 px-5 address-padding">
+            <!-- <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Visit Us</h1> -->
+            <p class="lead fs-4">We are located in Berwick-upon-Tweed, Northumberland. Feel free to visit us during our
+              working hours for any inquiries or services.</p>
+            <p class="fs-4">Unit 1<br>
+              1 Main Street<br>
+              Spittal<br>
+              Berwick-upon-Tweed<br>
+              TD15 1QY</p>
+            <div class="d-flex justify-content-left">
+              <a href="https://maps.google.com/maps/dir//Unit+1+1Main+Street+Spittal+Berwick-upon-Tweed+TD15+1QY/@55.7599498,-1.9970031,16z/data=!4m5!4m4!1m0!1m2!1m1!1s0x488748a30c766c15:0xced109bc88aadc34"
+                class="btn btn-dark fw-medium" target="_blank">Get Directions</a>
+            </div>
+            <p class="fs-4 mt-4">+447711806335</p>
+            <div class="d-flex justify-content-left">
+
+              <a href="tel:+447711806335" class="btn btn-dark fw-medium">Call Us</a>
+            </div>
+          </div>
+        </div>
+
         <h2 class="pb-2 border-bottom text-left">
           Contact Us
         </h2>
@@ -245,6 +275,7 @@
             </form>
           </div>
         </div>
+
         <h2 class="pt-4 pb-2 border-bottom text-left" data-aos="fade-down" data-aos-duration="1000">
           Our Socials
         </h2>
@@ -258,24 +289,6 @@
               </span>
             </a>
           </div>
-          <!-- Instagram Badge -->
-          <!-- <div class="col-auto mb-2">
-            <a href="#" target="_blank" class="badge-link">
-              <span class="badge text-warning-emphasis bg-warning-subtle border border-warning-subtle me-1">
-                <img src="/img/svg-icons/instagram.svg" alt="Instagram" width="24" height="24" class="me-2">
-                Instagram
-              </span>
-            </a>
-          </div> -->
-          <!-- TikTok Badge -->
-          <!-- <div class="col-auto mb-2">
-            <a href="#" target="_blank" class="badge-link">
-              <span class="badge text-light-emphasis bg-light-subtle border border-dark-subtle me-1">
-                <img src="/img/svg-icons/tiktok.svg" alt="TikTok" width="24" height="24" class="me-2">
-                TikTok
-              </span>
-            </a>
-          </div> -->
         </div>
       </div>
     </section>
