--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <a href="#services" class="btn btn-dark text-center text-md-start fw-medium about-btn">Learn More</a>
           </div>
           <div class="col-md-6 text-end">
-            <img src="img/main/about-image.png" class="img-fluid rounded about-img-responsive" alt="Hero Image">
+            <img src="img/main/about.jpg" class="img-fluid rounded about-img-responsive" alt="Hero Image">
           </div>
         </div>
       </div>
@@ -155,7 +155,7 @@
       <div class="row row-cols-1 row-cols-lg-3 g-4 py-3">
         <div class="col">
           <div class="card h-100 text-center">
-            <img src="img/main/Card1.png" class="card-img-top" alt="Residential">
+            <img src="img/main/1.jpg" class="card-img-top" alt="Residential">
             <div class="card-body">
               <h5 class="card-title">Routine Maintenance</h5>
               <p class="card-text"> Keep your car running smoothly with our regular servicing, tyre checks, brake
@@ -166,7 +166,7 @@
         </div>
         <div class="col">
           <div class="card h-100 text-center">
-            <img src="img/main/Card3.png" class="card-img-top" alt="Commercial">
+            <img src="img/main/2.jpg" class="card-img-top" alt="Commercial">
             <div class="card-body">
               <h5 class="card-title">Diagnostics & Repairs</h5>
               <p class="card-text">Experiencing car trouble? Our expert technicians use advanced diagnostics to pinpoint
@@ -177,7 +177,7 @@
         </div>
         <div class="col">
           <div class="card h-100 text-center">
-            <img src="img/main/Card2.png" class="card-img-top" alt="Industrial">
+            <img src="img/main/3.jpg" class="card-img-top" alt="Industrial">
             <div class="card-body">
               <h5 class="card-title">Service & MOT preparation</h5>
               <p class="card-text">From routine servicing to thorough MOT preparation, we ensure your vehicle is
