--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
           </div>
           <div class="col-lg-6 px-5 address-padding">
             <!-- <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Visit Us</h1> -->
-            <p class="lead fs-4">We are located in Berwick-upon-Tweed, Northumberland. Feel free to visit us during our
+            <p class="fs-4">We are located in Berwick-upon-Tweed, Northumberland. Feel free to visit us during our
               working hours for any inquiries or services.</p>
-            <p class="fs-4">Unit 1<br>
+            <p class="lead fs-4">Unit 1<br>
               1 Main Street<br>
               Spittal<br>
               Berwick-upon-Tweed<br>
@@ -224,7 +224,7 @@
               <a href="https://maps.google.com/maps/dir//Unit+1+1Main+Street+Spittal+Berwick-upon-Tweed+TD15+1QY/@55.7599498,-1.9970031,16z/data=!4m5!4m4!1m0!1m2!1m1!1s0x488748a30c766c15:0xced109bc88aadc34"
                 class="btn btn-dark fw-medium" target="_blank">Get Directions</a>
             </div>
-            <p class="fs-4 mt-4">+447787986751</p>
+            <p class="lead fs-4 mt-4">+447787986751</p>
             <div class="d-flex justify-content-left">
 
               <a href="tel:+447787986751" class="btn btn-dark fw-medium">Call Us</a>
