--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       <div class="container px-4">
         <div class="row pt-4">
           <h2 class="pb-2 border-bottom text-left">Visit Us</h2>
-          <div class="col-lg-6 mb-4 d-flex align-items-center">
+          <div class="col-lg-6 my-2 d-flex align-items-center">
             <iframe
               src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.916495118648!2d-1.9995780229126532!3d55.75995279144014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x488748a30c766c15%3A0xced109bc88aadc34!2sUnit%201%201Main%20Street%2C%20Spittal%2C%20Berwick-upon-Tweed%20TD15%201QY!5e0!3m2!1sen!2suk!4v1740305365967!5m2!1sen!2suk"
               width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
