--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <!--------------------->
     <section id="contact" class="pb-2 pt-5">
       <div class="container px-4">
-        <div class="row pt-4">
+        <div class="row py-2">
           <h2 class="pb-2 border-bottom text-left">Visit Us</h2>
           <div class="col-lg-6 my-2 d-flex align-items-center">
             <iframe
